--- a/index.html
+++ b/index.html
@@ -18,22 +18,34 @@
   </style>
 </head>
 <body>
-  Victor Crest
-  26
-  London
-
-  80K
-  Followers
-
-  803K
-  Likes
-
-  1.4K
-  Photos
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+  <div id="container">
+    <div id="profile-card-container">
+      <div id="profile-img"></div>
+      <h1><span id="profile-name">Victor Crest</span> 26</h1>
+      <h2>London</h2>
+      <hr>
+      <div id="followers">
+        <h3>80K</h3>
+        <p>Followers</p>
+      </div>
+      <div id="likes">
+        <h3>803K</h3>
+        <p>Likes</p>
+      </div>
+      <div id="photos">
+        <h3>1.4K</h3>
+        <p>Photos</p>
+      </div>
+    </div>
+    <footer>
+      <div class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+        Coded by <a href="https://github.com/Jason-Donmoyer" target="_blank">Jason Donmoyer</a>.
+      </div>
+    </footer>
+    
   </div>
+  
 
   <script src="js/app.js"></script>
 </body>
